* ext/win32ole/win32ole.c (reg_get_val): expand environment in   the pathname. [Bug #3907]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@29495 b2dd03c8-39d4-4d8f-98ff-823fe69b080e